# sapcy-redis

./: CONFIG.CFG  LICENSE  README.md  pyproject.toml  redis-utils.py  spacy-redis.py
