[tool.poetry]
name = "spacy-redis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
spacy = {extras = ["transformers"], version = "^3.3.1"}
redis = "^4.3.3"
pandas = "1.0.0"
numpy = "1.21.1"
sentence-transformers = "^2.2.0"
huggingface-hub = "0.2.1"
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
